UnderHeader is done

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html> 
 <html>
 <head>
-	<title> Metrolium </title> 
+	<title> Wowa's site </title> 
 	<meta charset="UTF-8">
 	<link rel = "stylesheet" href = "stylesheet.css"> 
 	<link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
@@ -39,5 +39,16 @@
 		</nav>	
 	</div>
 	</header>
+	<section>	
+		<div id="path">
+			<a href="#" >Home</a>  
+			<i class="fa fa-angle-right"></i>  
+			<div>Portfolio</div> 
+		</div>
+		<div id="underPath">
+			<h1>Portfolio</h1>
+			<div>Wibble</div>
+		</div>
+	</section>
 </body>
 </html>
