--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title> Wowa's site </title> 
 	<meta charset="UTF-8">
 	<link rel = "stylesheet" href = "stylesheet.css"> 
-	<link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+	<link rel = "stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 		</nav>	
 	</div>
 	</header>
-	<section>	
+	<section id="section1">	
 		<div id="path">
 			<a href="#" >Home</a>  
 			<i class="fa fa-angle-right"></i>  
@@ -48,6 +48,79 @@
 		<div id="underPath">
 			<h1>Portfolio</h1>
 			<div>Wibble</div>
+		</div>
+	</section>
+	<menu>
+		<div id="sect2nav">
+			<ul>
+				<li><a href="#">ALL</a></li>
+				<li><a href="#">DESIGN</a></li>
+				<li><a href="#">DEVELOPMENT</a></li>
+				<li><a href="#">RESPONSIVE</a></li>
+				<li><a href="#">RETINA</a></li>
+				<li><a href="#">WORDPRESS</a></li>
+			</ul>
+		</div>
+		<div id="sect2menu">
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Eighth Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Seventh Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Sixth Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Fifth Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Fourth Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Third Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>	
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>Second Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>
+			
+			<figure>
+				<img src="http://placehold.it/250x150">
+				<figcaption>First Portfolio Piece 
+					<div class = "date"> March 14, 2016</div> 
+				</figcaption> 
+			</figure>		
+		</div>
+	</menu>
+	<section id="section3">
+		<div id="sectionBuy">
 		</div>
 	</section>
 </body>
