Menu's bottom is done

--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
 	</menu>
 	<section id="section3">
 		<div id="sectionBuy">
+			A site wide Call to  Action band! Have you fallen in love yet?  	
+			<button>
+				BUY THIS THEME!
+			</button>
+		</div>
+		<div id="networks">
+			Find us elsewhere
+			
+		<div id="fackingButtons">
+				<a href="#" class="botButton"> <i class="fa fa-dribbble"></i> </a>
+				<a href="#" class="botButton"> <i class="fa fa-twitter"></i> </a>
+				<a href="#" class="botButton"> <i class="fa fa-facebook"></i> </a>			
+				<a href="#" class="botButton"> <i class="fa fa-rss"	></i> </a>
+		</div>
 		</div>
 	</section>
 </body>
