Page is done, finally

--- a/index.html
+++ b/index.html
@@ -137,5 +137,102 @@
 		</div>
 		</div>
 	</section>
+	<footer>
+	<div id="footerSection">
+		<div class="footerDiv" id="botDiv1">
+			About WowaShaggy
+			<div id=botDivIn>
+				The snow glows white on the mountain tonight
+				Not a footprint to be seen
+				A kingdom of isolation
+				And it looks like I'm the queen
+
+				The wind is howling like this swirling storm inside
+				Couldn't keep it in, heaven knows I've tried
+
+				Don't let them in, don't let them see
+				Be the good girl you always have to be
+				Conceal, don't feel, don't let them know
+				Well, now they know
+
+				Let it go, let it go
+				Can't hold it back anymore
+				Let it go, let it go
+				Turn away and slam the door
+				I don't care what they're going to say
+				Let the storm rage on
+				The cold never bothered me anyway
+			</div>
+			<div id="botNav">
+				<input type="text">
+				<div id="divBotton">
+					<i class="fa fa-search"></i>
+				</div>
+			</div>
+		</div>
+		
+		<div class="footerDiv">
+			Recent Tweet
+			
+			<div class="botBigDiv2" id="bbd1">
+				Must share and close, too addictive and way too much fun. Responsive design with an instrument, brilliant: Garmoshka
+				<a href="#">http://t.co/zhhaoRkkYU</a>
+					<div class="twitterGround"><i class="fa fa-twitter"></i></div>
+			</div>
+			
+			<div class="botBigDiv2" id="bbd2">
+				Entypo -250+ carefully crafted pictograms
+				<a href="#">http://t.co/iF5qH9fQ1s</a>
+				<div class="twitterGround"><i class="fa fa-twitter"></i></div>
+			</div>
+			
+			<div>
+				<a href="#" id="botbotButton"> <i class="fa fa-twitter"></i>
+				Follow Us on Twitter </a>
+			</div>
+		</div>
+		
+		<div class="footerDiv">
+			Recent Posts
+			
+			<div class="botBigDiv3">
+				A stunning post with lots of beautifully 
+				styled typography elements inside
+			</div>
+			
+			<div class="botSmallDiv3">
+				June 5, 2013
+			</div>
+			
+			<div class="botBigDiv3">
+				A beautifully designed, modern blog 
+				with seven post formats! Here's video post
+			</div>
+			
+			<div class="botSmallDiv3">
+				May 23, 2013
+			</div>
+			
+			<div class="botBigDiv3">
+				Nam lorem magna, dapibus in adipiscing ut
+			</div>
+			
+			<div class="botSmallDiv3">
+				April 9, 2013
+			</div>
+		</div>
+	</div>
+	
+	<div id="bottom">
+			<ul>
+				<li>BLOG</li>
+				<li>PURSHASE NOW</li>
+				<li>SHORTCODES</li>
+			</ul>
+			<div>
+				© 2024 WowaShaggy - <span>WowaShaggy WordPress Theme</span> by <span>Wowa</span>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
